--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-"Hai, @sakitkepala" 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Depan rumah @sakitkepala</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
+  <body>
+    <h1>@SAKITKEPALA</h1>
+  </body>
+</html>
